<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.hk.reciptmanagment.data.viewModel.LoginViewModel" />
        <variable
            name="error"
            type="com.hk.reciptmanagment.utils.FormErrors" />
        <import type="android.view.View" />
        <import type="com.hk.reciptmanagment.utils.BindingAdaptoUtils" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constrain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guidline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guidline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/mcgpalette0_400"
            app:layout_constraintBottom_toTopOf="@id/center_guidline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="@id/top_guidline"
            app:layout_constraintEnd_toEndOf="@id/view1"
            app:layout_constraintStart_toStartOf="@id/view1"
            app:layout_constraintTop_toTopOf="@id/view1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/round_corner_white_background"
            android:padding="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/top_guidline">


            <TextView
                android:id="@+id/title"
                style="@style/title.title1"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appname"
                style="@style/title.title2"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="Demo Application"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/username"
                errorText='@{loginViewModel.formErrors.contains(error.INVALID_USERNAME) ? String.format(@string/enter_valid_data,@string/username) : ""}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={loginViewModel.userName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/password"
                errorText='@{loginViewModel.formErrors.contains(error.INVALID_PASSWORD) ? String.format(@string/enter_valid_data,@string/password) : ""}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email_hint"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={loginViewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/mcgpalette0_700"
                android:onClick="@{()->loginViewModel.loginNow()}"
                android:text="Sign In"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_password_hint" />
            <TextView
                android:id="@+id/or"
                style="@style/title.title3"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_signup" />

            <TextView
                android:id="@+id/registor_now"
                style="@style/title.title2"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/registor_now"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or" />
            <ProgressBar
                android:visibility="@{loginViewModel.showPd?View.VISIBLE:View.GONE}"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>